# Famiglia-Recipes

./: .env.example  .gitignore  LICENSE  README.md  components.json  deploy.sh  drizzle.config.ts  ecosystem.config.cjs  eslint.config.js  package.json  tsconfig.json  vite.config.ts
.drizzle/: 0001_cooing_gateway.sql  0001_remarkable_moon_knight.sql
.drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
backend/: config.py  pyproject.toml  requirements.in  requirements.txt
backend/api/: __init__.py  models.py
backend/api/core/: email.py  errors.py  handlers.py
backend/api/models/: models.py
backend/api/routes/: email.py  errors.py  handlers.py  main.py  tokens.py
backend/api/static/: labels.json  recipes.json
backend/api/templates/: password_reset.html
backend/api/utils/: decorators.py  enums.py  functions.py  helper.py  scheduled_tasks.py
backend/tests/: base_test.py  test_auth.py  test_main.py  test_users.py
frontend/: .env.development  .env.production  components.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: MyApiClient.jsx
frontend/src/hooks/: FetchDataHook.jsx
frontend/src/lib/: utils.js
frontend/src/pages/: AddRecipePage.jsx  AllRecipesPage.jsx  DashboardPage.jsx  DetailsPage.jsx  EditRepicePage.jsx  ForgotPasswordPage.jsx  HomePage.jsx  ResetPasswordPage.jsx  SearchRecipePage.jsx
frontend/src/providers/: UserProvider.jsx
frontends/: package.json
src/: client.tsx  global-middleware.ts  routeTree.gen.ts  router.ts  server.ts  start.ts  styles.css
src/env/: server.ts
src/routes/: __root.tsx  _private.tsx  _public.tsx
vite-plugins/: hono-server-plugin.ts
(+245 files in other folders)
