[project]
name = "famiglia-recipes-backend"
version = "2.0.0"
description = "Familiga Recipes website"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "flask-httpauth>=4.8.0",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.0.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
